--- a/04_PROJECT/css/designes.css
+++ b/04_PROJECT/css/designes.css
@@ -13,7 +13,7 @@
 .paper-content {
     margin: 10px -15px 0 -15px;
     padding: 10px 15px;
-    background: #f2f0f0;
+    background: #c4ddb0;
     overflow: hidden;
 }
 .paper-link {
