--- a/04_PROJECT/css/lightbox.css
+++ b/04_PROJECT/css/lightbox.css
@@ -1,17 +1,19 @@
 
 #darken-background {
     position: absolute;
-    top: 0; left: 0; right: 0; height: 100%;
+    top: 0; left: 0; right: 0; 
+    height: 0;
 
     display: none;
     background: rgba(0, 0, 0, 0.9);
     z-index: 10000;
 
-    overflow-y: scroll;
+    overflow-y: hidden; /* 보기 더 안좋아서 감춤!! */
 }
 
 #lightbox {
-    width: 700px;
+    position: absolute;
+    /* width: 700px; */
     margin: 20px auto;
     padding: 15px;
 
@@ -20,6 +22,8 @@
     background: white;
     box-shadow: 0 5px 5px rgba(34, 25, 25, 0.4);
     text-align: center;
+
+    left:50%; transform:translateX(-50%); /* 중앙정렬 */
 }
 
 .user-information {
@@ -31,8 +35,8 @@
     width: 70px;
 }
 .user-information-text {
-    float: right;
-    width: 620px;
+    float: left;
+    width: 120px;
 }
 .lightbox-splitter {margin: 10px 0; overflow: auto;}
 
