--- a/04_PROJECT/css/search.css
+++ b/04_PROJECT/css/search.css
@@ -9,7 +9,7 @@
     background-color: #ffffff;
     
     border: 1px solid #cccccc;
-    border-radius: 15px 0 0 15px;
+    /* border-radius: 15px 0 0 15px; */
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.5);
 
     width: 120px; height: 26px;
@@ -28,7 +28,7 @@
     width: 50px; height: 26px;
 
     border: 1px solid #cccccc;
-    border-radius: 0 15px 15px 0;
+    /* border-radius: 0 15px 15px 0; */
     
     margin-left: -1px;
     /* vertical-align: top; */
