--- a/04_PROJECT/css/designes.css
+++ b/04_PROJECT/css/designes.css
@@ -15,6 +15,7 @@
     padding: 10px 15px;
     background: #c4ddb0;
     overflow: hidden;
+    border-radius: 0 0 10px 10px;
 }
 .paper-link {
     display: block;
