--- a/04_PROJECT/css/form.css
+++ b/04_PROJECT/css/form.css
@@ -17,7 +17,7 @@
     height: 40px;
     left: 50%; margin-left: -100px;
 
-    background-image: url('../images/logo.png');
+    background-image: url('../logoes/logo.png');
     background-repeat: no-repeat;
     text-indent: -1000px;
 }
