프로젝트 50% 완료

--- a/04_PROJECT/css/designes.css
+++ b/04_PROJECT/css/designes.css
@@ -35,3 +35,14 @@
 #main-section img:nth-child(2n) { 
     content: url("images/logo.png");    
 }*/
+
+canvas {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+
+    display: block;
+}
