--- a/04_PROJECT/css/init.css
+++ b/04_PROJECT/css/init.css
@@ -14,9 +14,9 @@ img {
 }
 
 li {
-    list-style:none;
+    list-style: none;
 }
 
 html {
-    background-color: #f7f5f5;
+    background-color: #000000;
 }
