--- a/04_PROJECT/css/designes.css
+++ b/04_PROJECT/css/designes.css
@@ -17,6 +17,10 @@
     overflow: hidden;
     border-radius: 0 0 10px 10px;
 }
+.paper-link > img {
+    border-radius: 5px;
+}
+
 .paper-link {
     display: block;
     float: left;
@@ -25,6 +29,7 @@
     float: left;
     width: 150px;
     margin-left: 10px;
+    overflow:hidden;word-wrap:break-word;
 }
 
 .paper-holder img {
@@ -35,14 +40,3 @@
 #main-section img:nth-child(2n) { 
     content: url("images/logo.png");    
 }*/
-
-canvas {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:-1;
-
-    display: block;
-}
