--- a/04_PROJECT/css/init.css
+++ b/04_PROJECT/css/init.css
@@ -1,6 +1,19 @@
-canvas {
-    height: 100%;
+
+body{
+    background-color: #000000;
+    padding: 0px;
+    margin: 0px;
 }
+
+#gradient
+{
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 0px;
+  margin: 0px;
+}
+
 * {
     margin: 0px;
     padding: 0px;
