--- a/04_PROJECT/css/lightbox.css
+++ b/04_PROJECT/css/lightbox.css
@@ -34,9 +34,13 @@
     float: left;
     width: 70px;
 }
+.user-information-image > img {
+    border-radius: 5px;
+}
 .user-information-text {
     float: left;
     width: 120px;
+    margin-left: 15px;
 }
 .lightbox-splitter {margin: 10px 0; overflow: auto;}
 
