--- a/04_PROJECT/css/search.css
+++ b/04_PROJECT/css/search.css
@@ -25,7 +25,8 @@
 .input-search-submit {
     display: block;
     float: left;
-    width: 50px; height: 26px;
+    /* width: 50px;  */
+    height: 26px;
 
     border: 1px solid #cccccc;
     /* border-radius: 0 15px 15px 0; */
