--- a/04_PROJECT/css/nav.css
+++ b/04_PROJECT/css/nav.css
@@ -1,6 +1,7 @@
 
 #main-navigation {
     height: 50px;
+    margin-bottom: 20px;
     /* background: #faf7f7; */
 
     /* border-top: 1px solid #cfcaca; */
@@ -12,7 +13,13 @@
 }
 .navi-div {
     display: inline-block;
+    text-align: center;
 }
+
+.file_input_div {position:relative; width:80px; height:36px; border-radius:5px;}
+.file_input_img_btn {padding:0 0 0 5px; border-radius:5px;}
+.file-submit {font-size:29px; position:absolute; right:0px; top:0px; opacity:0; filter: alpha(opacity=0); -ms-filter: alpha(opacity=0); cursor:pointer;}
+
 
 #main-navigation > ul {
     overflow: hidden;
